Fix some visual bugs in dark mode

--- a/app/components/modules/header/style.module.scss
+++ b/app/components/modules/header/style.module.scss
@@ -80,7 +80,7 @@
 	align-items: center;
 	justify-content: center;
 	cursor: pointer;
-	background: var(--color-bg-alt);
+	background: var(--color-bg-off-solid);
 	svg{
 		width: 18px;
 		height: 18px;
