--- a/app/components/modules/work-history/style.module.scss
+++ b/app/components/modules/work-history/style.module.scss
@@ -89,7 +89,7 @@
 					content: '';
 					height: 3rem;
 					width: 100vw;
-					background: var(--color-bg-alt);
+					background: var(--color-bg-off-solid);
 					border-left: 1px solid var(--color-foreground);
 					position: absolute;
 					bottom: -1px;
